--- a/Module_3/pom.xml
+++ b/Module_3/pom.xml
@@ -35,6 +35,13 @@
             <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.epam.tat</groupId>
+            <artifactId>module4</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/calculator-1.0.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
