--- a/Module_6/pom.xml
+++ b/Module_6/pom.xml
@@ -9,7 +9,7 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
+                <groupId>org.apache.maven.plugins</groupId>F
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>8</source>
